Fixes hr colour for dark mode

--- a/src/styles/themes/_themes.scss
+++ b/src/styles/themes/_themes.scss
@@ -37,7 +37,7 @@ body.dark-theme {
   }
 
   hr.dark-mode-border {
-    border-color: var(--color);
+    border-color: var(--snowy-mint);
   }
 
   #logos {
@@ -74,7 +74,7 @@ body.light-theme {
       }
 
       hr.dark-mode-border {
-        border-color: var(--color);
+        border-color: var(--snowy-mint);
       }
       #logos {
         background-color: var(--primary);
